[package]
name = "bootleg_networking"
version = "0.2.0"
edition = "2021"
authors = ["William Batista <bootlegbilly@protonmail.ch>"]
license = "MIT"

[dependencies]
bevy_app = { version = "0.7" }
bevy_ecs = { version = "0.7" }
bevy_tasks = { version = "0.7" }

# For creating an interface to bevy_networking_turbulence
bevy_networking_turbulence = { git = "https://github.com/billyb2/bevy_networking_turbulence", branch = "publicized", default-features = false, features = ["use-webrtc"] }

tokio = { version = "1", features = ["rt-multi-thread", "net"], optional = true }
turbulence = { version = "0.4" }

# For creating an interface to the TCP cli/serv
net_native = { path = "net_native" }

[dev-dependencies]
bevy = { version = "0.7", default-features = false }

[features]
default = ["native"]
native = [
	"net_native/native",
	"tokio",
]
web = [
	"net_native/web",
]
