[package]
name = "native_shared"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "io-util"], optional = true }

bincode = { version = "1" }
dashmap = { version = "5", features = ["rayon"], optional = true }

# Just used for MessageChannel trait
turbulence = { version = "0.4" }

[features]
native = [
	"tokio",
	"dashmap",
]

web = []
